--- a/journal/201911.md
+++ b/journal/201911.md
@@ -262,24 +262,23 @@ Selected articles:
 
 Translations:
 
-- {}
+- Decred Journal November 2019 was translated to Arabic (@arij), Chinese (@Dominic and co), Polish (@kozel) and Spanish (@francov\_ and @luisantoniocrag). Thank you for keeping the world updated!
 
 Videos:
 
-- Building a store-of-value with Decred’s Jake Yocom-Piatt on Messari's Unqualified Opinions ([apple podcasts](https://podcasts.apple.com/us/podcast/building-a-store-of-value-with-decreds-jake-yocom-piatt/id1455666979?i=1000457903445)) - live stream viewers ([pscp.tv](https://twitter.com/MessariCrypto/status/1191783062037766144)) were treated to an angelic performance by @jy-p, answering interesting questions about Decred's history and approach.
+- Building a Store-of-Value with Decred's Jake Yocom-Piatt on Messari's Unqualified Opinions ([player.fm](https://player.fm/series/messaris-unqualified-opinions/building-a-store-of-value-with-decreds-jake-yocom-piatt), [apple](https://podcasts.apple.com/us/podcast/building-a-store-of-value-with-decreds-jake-yocom-piatt/id1455666979?i=1000457903445)) - live stream viewers ([youtube](https://www.youtube.com/watch?v=LMJp8rKLkkM)) were treated to an angelic performance by @jy-p, answering interesting questions about Decred's history and approach.
 - Decred Assembly Deep Dive with @davecgh ([youtube](https://www.youtube.com/watch?v=gGQuY0kOt7g)) - in depth discussion of consensus rules and v1.5.0 RC1.
-- Digit-All episode about Decred with @Akin ([youtube](https://www.youtube.com/watch?v=4r6z9JZxRRI)) 
+- Digit-All episode about Decred with @akinsawyerr ([youtube](https://www.youtube.com/watch?v=4r6z9JZxRRI)) 
 - Decred Review: Why DCR Deserves Attention! by Coin Bureau ([youtube](https://www.youtube.com/watch?v=elfBK5QBVmo))
-- Why Decred is Overdue for a Coinbase Listing by @exitus ([youtube](https://www.reddit.com/r/decred/comments/dyl6vr/why_decred_is_overdue_for_a_coinbase_listing/))
-- Can You Really Trust Your Bank? ([vimeo](https://vimeo.com/375884648)), @moo31337 features in a panel at Web Summit, meme version by @exitus ([youtube](https://www.youtube.com/watch?v=0Bq48X3cO_s))
-- 
+- Why Decred is Overdue for a Coinbase Listing by @Exitus ([youtube](https://www.youtube.com/watch?v=Og3kGX_fYho), discussed on [reddit](https://www.reddit.com/r/decred/comments/dyl6vr/why_decred_is_overdue_for_a_coinbase_listing/))
+- Can You Really Trust Your Bank? ([vimeo](https://vimeo.com/375884648)) - @moo31337 features in a panel at Web Summit. @Exitus made a hilarious meme cut ([youtube](https://www.youtube.com/watch?v=0Bq48X3cO_s))
 
 Audio:
 
-- Base Layer Episode 086 - Jake Yocom Piatt (Decred) ([spotify](https://open.spotify.com/episode/4vMtWg6lejqR9pfKkmsgXc?si=9XwNiFYhTpy2FD_2B8rBaA))
-- Market Disruptors: Developing Privacy on the Blockchain with Jake Yocom-Piatt ([stitcher](https://www.stitcher.com/podcast/anchor-podcasts/market-disruptors/e/65439848))
-- Decred in Depth Ep. 12 - @akin talks about opaque governance in [#cryptocurrency](https://twitter.com/hashtag/cryptocurrency?src=hashtag_click) as a barrier to new entrants, Decred making the rules clear, and the opportunities offered by frictionless trust-minimized global payments in Africa.
-- Decred in Depth Ep. 13 - @richardred talks about contributing to Decred, researching blockchain governance, writing [cryptocommons.cc](https://cryptocommons.cc), and choosing to remain pseudonymous.
+- Base Layer Episode 086 - Jake Yocom Piatt (Decred) ([podbean](https://www.podbean.com/media/share/pb-9ah38-c88678), [spotify](https://open.spotify.com/episode/4vMtWg6lejqR9pfKkmsgXc))
+- Market Disruptors: Developing Privacy on the Blockchain with Jake Yocom-Piatt ([anchor.fm](https://anchor.fm/markmoss/episodes/Developing-Privacy-On-The-Blockchain-With-Jake-Yocom-e934qv), [stitcher](https://www.stitcher.com/podcast/anchor-podcasts/market-disruptors/e/65439848))
+- Decred in Depth Ep. 12 - @akinsawyerr talks about opaque governance in [#cryptocurrency](https://twitter.com/hashtag/cryptocurrency) as a barrier to new entrants, Decred making the rules clear, and the opportunities offered by frictionless trust-minimized global payments in Africa. ([libsyn](https://decredindepth.libsyn.com/akin-sawyerr-dcr-africa-governance), [soundcloud](https://soundcloud.com/decredindepth/ep-12-akin-sawyerr-dcr-africa-governance))
+- Decred in Depth Ep. 13 - @richardred talks about contributing to Decred, researching blockchain governance, writing [cryptocommons.cc](https://cryptocommons.cc), and choosing to remain pseudonymous. ([libsyn](https://decredindepth.libsyn.com/richard-red-dcr-research-politeia-mm-proposal), [soundcloud](https://soundcloud.com/decredindepth/ep-13-richard-red-dcr-research-politeia-mm-proposal))
 
 LunarCRUSH shared several [charts](https://twitter.com/LunarCRUSH/status/1191017614971027458) that combine basic market data like price and volume with sentiment analysis of Decred on social media.
 
