--- a/journal/201911.md
+++ b/journal/201911.md
@@ -223,21 +223,24 @@ Attended:
 
 - Nov 4-7 - [Web Summit](https://websummit.com/) - Lisbon, Portugal. Decred team ran a [stand](https://twitter.com/marco_peereboom/status/1191651269640888320) for 2 days. Very [few](https://twitter.com/NoahPierau/status/1192045467435188224) blockchain projects have secured speaking slots, likely due to the bear market. @moo31337 [talked](https://twitter.com/decredproject/status/1192469998175948801) on the stage with representatives of the finance industry on the topic "Can you really trust your bank?" ([video](https://vimeo.com/375884648) + hilarious [cut](https://www.youtube.com/watch?v=0Bq48X3cO_s) by @Exitus). (photos: [1](https://twitter.com/JamieHoldstock/status/1191760511878279168), [2](https://twitter.com/NoahPierau/status/1192056049764904960), [3](https://twitter.com/kakalordao/status/1192131145141555201), [4](https://twitter.com/marco_peereboom/status/1192990143822454784))
 - Nov 6 - [Bitcoin and Blockchains Meetup](https://www.facebook.com/events/1444182132424731/) - Oaxaca, Mexico. {@evok3d?}
-- Nov 6 - [Decred Meetup](https://twitter.com/amxromero/status/1192241858816217089) - Medellín, Colombia. @elian and @victorarubin talked to around 35 people of age 20-50 who asked amazing questions about Politeia, Decred's plans for Latam, PoS attack vectors and smart contracts. (photos: [1](https://twitter.com/Decred_ES/status/1192236147201712128), [2](https://twitter.com/victorarubin/status/1192262347118858241))
-- Nov 7 - [Journey 4.0](https://twitter.com/legal_medellin/status/1189918302061187073) - Medellín, Colombia. {any info? @elian?}
+- Nov 6 - [Decred Meetup](https://twitter.com/amxromero/status/1192241858816217089) - Medellín, Colombia. @elian and @victorarubin talked to around 35 people of age 20-50 who asked amazing questions about Politeia, Decred's plans for Latam, PoS attack vectors and smart contracts. {link report when merged} (photos: [1](https://twitter.com/Decred_ES/status/1192236147201712128), [2](https://twitter.com/victorarubin/status/1192262347118858241))
+- Nov 7 - [Journey 4.0](https://twitter.com/legal_medellin/status/1189918302061187073) - Medellín, Colombia. @elian was invited by Legal Hackers Medellín to talk about the challenges of blockchain technology for international law at EAFIT University, biggest business administration university in Colombia. {link report when merged}
 - Nov 8 - [World Blockchain Conference](https://www.8btc.com/wbc-2019/) - Jiaxing, China. @Dominic has represented Decred and talked about DAO and privacy features. There have been reports of him being turned into a [cyborg](https://twitter.com/wanbihou/status/1192484367626424321) at the party preceding the event. Community members in the region are advised to follow standard protocols and take necessary precautions. Another notable event is video footage of [dancing](https://twitter.com/wanbihou/status/1193154668601327617) that sparked [#DecredDanceChallenge](https://twitter.com/hashtag/DecredDanceChallenge). (photos: [1](https://twitter.com/wanbihou/status/1192806081568722944), [2](https://twitter.com/wanbihou/status/1193218449721311233))
+- Nov 15 - [Open Banking, Fintech and Blockchain Summit](https://twitter.com/Decred_ES/status/1195025379255144448) in Mexico City, Mexico. @elian was invited to talk about digital identities. During the panel he gave a brief intro of Decred and the importance of security and privacy of personal data. {link report when merged}
 - Nov 15-16 - [CriptoBlock](https://criptoblock.com.br/) - São Paulo, Brazil. @Rhama and @girino gave talks about Decred. Although the organizers worked hard, only around 250 people attended out of 1000-1200 expected, reflecting today's market. Decred was a bronze sponsor.
-- Nov 21 - [Africa Blockchain Summit](https://www.africablockchainsummit.com/agenda.html) - Rabat, Morocco. @arij took the opportunity to discover the point of view of view of centralized organizations and to represent Decred to a wide variety of people from different backgrounds. ([report](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$157443668448708migov:decred.org), [photos](https://twitter.com/DecredArabia/status/1197622992806776833))
+- Nov 21 - [Africa Blockchain Summit](https://www.africablockchainsummit.com/agenda.html) - Rabat, Morocco. @arij took the opportunity to discover the point of view of view of centralized organizations and to represent Decred to a wide variety of people from different backgrounds. ([report](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$157443668448708migov:decred.org), [photos](https://twitter.com/DecredArabia/status/1197622992806776833)) {link report when merged}
 - Nov 21 - [Africa Fintech Summit](https://africafintechsummit.com/addis/) - Addis Ababa, Ethiopia. @akinsawyerr spoke on a blockchain panel and made a few valuable connections. Check the full report and photos [here](https://github.com/decredcommunity/events/blob/master/reports/20191121-africa-fintech-summit-addis-ababa-ethiopia.md). A week later he talked about Decred and the trip at @VOANews ([video](https://www.youtube.com/watch?v=WOqCjQELpao)).
-- Nov 21 - [Blockchain Conference](https://www.eventbrite.com.ar/e/conferencia-blockchain-tickets-81397410847) - Veracruz, Mexico. The event took place in the largest technology university in the city. {any info? @luisantoniocrag @francov_}
-- Nov 30 - [Decred Meetup](https://twitter.com/RodgersJabz/status/1194309441774063617) - Kampala, Uganda. The audience of 53 received an intro to Decred and its features and a practical session showing how to use the wallet. Full report by @jabz here {todo}.
+- Nov 21 - [Blockchain Conference](https://www.eventbrite.com.ar/e/conferencia-blockchain-tickets-81397410847) - Veracruz, Mexico. The event took place in the largest technology university in the city. {link report when merged}
+- Nov 30 - [Decred Meetup](https://twitter.com/RodgersJabz/status/1194309441774063617) - Kampala, Uganda. The audience of 53 received an intro to Decred and its features and a practical session showing how to use the wallet. Full report by @jabz [here](https://github.com/decredcommunity/events/blob/master/reports/20191130-decred-meetup-kampala-uganda.md).
 
 Upcoming:
 
 - 5-year anniversary event for the Bitcoin Vietnam community. {@joshuam what is the date, city and any extra info?}
 - Dec 4 - [Decred Demo](https://www.meetup.com/BlockchainMelbourne/events/266857183/) - Melbourne, Australia. @eSizeDave will showcase Decrediton and Politeia. Hosted by Blockchain Centre. Speakers must not be intoxicated.
+- Dec 12-13 - Labitconf - Montevideo, Uruguay. Decred team members will be present at the biggest cryptocurrency and blockchain conference in Latin America.
 - Jan 7 - [Digital Money Forum](https://thedigitalmoneyforum.com/) - Las Vegas, USA. The event is part of CES 2020. @akinsawyerr will talk on a [session](https://thedigitalmoneyforum.com/Sessions/the-problem-with-old-money-a-great-debate/) about future economy.
 - Jan 29-31 - [Crypto 101 Online Summit](https://www.crypto2020summit.com/) - web. @lukebp will give an overview of Decred's plans for 2020.
+- Apr 13-17 - Blockchain Land at Talent Land - Guadalajara, Mexico. Decred will be sponsor of Talent Land and be present with a booth at Blockchain Land.
 - May, date TBA - [BitConf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. The event was moved to May 2020.
 
 ## Media
@@ -401,6 +404,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: bee, Ditto Team, Dustorf, richardred, s\_ben
+- writing and editing: bee, Ditto Team, Dustorf, elian, richardred, s\_ben
 - reviews and feedback: akinsawyerr, chappjc, davecgh, lukebp, matheusd, Haon, emiliomann
 - title image: saender
