--- a/journal/201911.md
+++ b/journal/201911.md
@@ -7,7 +7,7 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 {introduction, major news of the month ordered by impact}
 
 - new RCs
-- DEX development?
+- DEX development
 - Latam marketing approved
 - LN ticket splitting
 
@@ -42,8 +42,6 @@ Block ancestor traversal significantly optimized by introducing a [deterministic
 Bug fixes, new methods, code cleanup.
 
 Method added to detect [reused addresses](https://github.com/decred/dcrwallet/pull/1616) and their corresponding outpoints.
-
-Issues preventing VSP ticket buying [addressed](https://github.com/decred/dcrwallet/pull/1618). { what issues? did VSP ticket buying break? was it in master or in a v1.5 RC? }
 
 [Decrediton](https://github.com/decred/decrediton):
 
@@ -85,7 +83,7 @@ Dockerfile [updated](https://github.com/decred/dcrlnd/pull/56) for dcrlnd.
 
 [dcrdex](https://github.com/decred/dcrdex):
 
-Development is hot. New components implemented in November:
+Development is hot! New components implemented in November:
 
 - [auth manager](https://github.com/decred/dcrdex/pull/50)
 - [account registrar](https://github.com/decred/dcrdex/pull/58)
@@ -112,7 +110,7 @@ v5.2 is out now!
 
 Frontend highlights: updated header and blocks page, improved charts, button to copy text to clipboard on addresses and hashes. On the backend: dcrd v1.5 support, dropped SQLite support to focus on PostgreSQL, Insight API fixes, performance improvements. Check the [release notes](https://github.com/decred/dcrdata/releases/tag/v5.2.0) to see all changes. The release took 83 commits by 9 contributors over 4 months. Contrats to dcrdata team!
 
-Work is in progress to show [CSPP mixes](https://github.com/decred/dcrdata/pull/1610) (live on [alpha](https://alpha.dcrdata.org/) on [block](https://alpha.dcrdata.org/block/403513) page) and calculate [attack cost](https://github.com/decred/dcrdata/pull/1617).
+Work is in progress to show [CSPP mixes](https://github.com/decred/dcrdata/pull/1610) (live on alpha on [block](https://alpha.dcrdata.org/block/403513) page) and calculate [attack cost](https://github.com/decred/dcrdata/pull/1617).
 
 [docs](https://github.com/decred/dcrdocs):
 
@@ -135,7 +133,7 @@ Dev activity stats for November: 173 active PRs, 342 master commits, 72K added a
 
 Welcome to new first time contributors with code merged to master: zeoio ([dcrdex](https://github.com/decred/dcrdex/commits?author=zeoio)), githubsands ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=githubsands)), eharris128 ([dcrweb](https://github.com/decred/dcrweb/commits?author=eharris128)).
 
-Two new contributors missed by our detection earlier: neddoz ([dcrios](https://github.com/raedahgroup/dcrios/commits?author=neddoz) since Jun), quacklabs ([dcrios](https://github.com/raedahgroup/dcrios/commits?author=quacklabs), since Sep). Welcome aboard!
+Two new contributors missed by our detection earlier: neddoz ([dcrios](https://github.com/raedahgroup/dcrios/commits?author=neddoz) since Jun) and quacklabs ([dcrios](https://github.com/raedahgroup/dcrios/commits?author=quacklabs), since Sep). Welcome aboard!
 
 Community stats:
 
@@ -215,19 +213,19 @@ Also:
 - Identified and shared opportunities for the community to engage with Crypto Twitter and educate outsiders about Decred.
 - Worked closely to support the Decred developer community's achievements over the last year.
 
-@bee wrote an overview of [marketing strategies](https://xaur.github.io/writings/posts/20191127-marketing-strategies.html) to explore. Among other things, it calls to improve reporting, use word "money", promote the actual use of DCR for tipping and donations, pitch DCR to higly aligned communities and individuals who could already benefit from it. ([Reddit](https://www.reddit.com/r/decred/comments/e2lhwd/marketing_strategies/))
+@bee wrote an overview of [marketing strategies](https://xaur.github.io/writings/posts/20191127-marketing-strategies.html) to explore. Some of the key topics are to improve reporting, use word "money", promote the actual use of DCR for tipping, donations and funding projects, pitch DCR to higly aligned communities and individuals as a way to transfer value, and boost social media presence. ([Reddit](https://www.reddit.com/r/decred/comments/e2lhwd/marketing_strategies/))
 
 ## Events
 
 Attended:
 
-- Nov 4-7 - [Web Summit](https://websummit.com/) - Lisbon, Portugal. Decred team ran a [stand](https://twitter.com/marco_peereboom/status/1191651269640888320) for 2 days. Very [few](https://twitter.com/NoahPierau/status/1192045467435188224) blockchain projects have secured speaking slots, likely due to the bear market. @moo31337 [talked](https://twitter.com/decredproject/status/1192469998175948801) on the stage with representatives of the finance industry on the topic "Can you really trust your bank?" ([video](https://vimeo.com/375884648) + hilarious [cut](https://www.youtube.com/watch?v=0Bq48X3cO_s) by @Exitus). (photos: [1](https://twitter.com/JamieHoldstock/status/1191760511878279168), [2](https://twitter.com/NoahPierau/status/1192056049764904960), [3](https://twitter.com/kakalordao/status/1192131145141555201), [4](https://twitter.com/marco_peereboom/status/1192990143822454784))
+- Nov 4-7 - [Web Summit](https://websummit.com/) - Lisbon, Portugal. Decred team ran a [stand](https://twitter.com/marco_peereboom/status/1191651269640888320) for 2 days. Very [few](https://twitter.com/NoahPierau/status/1192045467435188224) blockchain projects have secured speaking slots, likely due to the bear market. @moo31337 [talked](https://twitter.com/decredproject/status/1192469998175948801) on the stage with representatives of the finance industry on the topic "Can you really trust your bank?". (photos: [1](https://twitter.com/JamieHoldstock/status/1191760511878279168), [2](https://twitter.com/NoahPierau/status/1192056049764904960), [3](https://twitter.com/kakalordao/status/1192131145141555201), [4](https://twitter.com/marco_peereboom/status/1192990143822454784))
 - Nov 6 - [Bitcoin and Blockchains Meetup](https://www.facebook.com/events/1444182132424731/) - Oaxaca, Mexico. {@evok3d?}
 - Nov 6 - [Decred Meetup](https://twitter.com/amxromero/status/1192241858816217089) - Medellín, Colombia. @elian and @victorarubin talked to around 35 people of age 20-50 who asked amazing questions about Politeia, Decred's plans for Latam, PoS attack vectors and smart contracts. {link report when merged} (photos: [1](https://twitter.com/Decred_ES/status/1192236147201712128), [2](https://twitter.com/victorarubin/status/1192262347118858241))
 - Nov 7 - [Journey 4.0](https://twitter.com/legal_medellin/status/1189918302061187073) - Medellín, Colombia. @elian was invited by Legal Hackers Medellín to talk about the challenges of blockchain technology for international law at EAFIT University, biggest business administration university in Colombia. {link report when merged}
 - Nov 8 - [World Blockchain Conference](https://www.8btc.com/wbc-2019/) - Jiaxing, China. @Dominic has represented Decred and talked about DAO and privacy features. There have been reports of him being turned into a [cyborg](https://twitter.com/wanbihou/status/1192484367626424321) at the party preceding the event. Community members in the region are advised to follow standard protocols and take necessary precautions. Another notable event is video footage of [dancing](https://twitter.com/wanbihou/status/1193154668601327617) that sparked [#DecredDanceChallenge](https://twitter.com/hashtag/DecredDanceChallenge). (photos: [1](https://twitter.com/wanbihou/status/1192806081568722944), [2](https://twitter.com/wanbihou/status/1193218449721311233))
 - Nov 15 - [Open Banking, Fintech and Blockchain Summit](https://twitter.com/Decred_ES/status/1195025379255144448) in Mexico City, Mexico. @elian was invited to talk about digital identities. During the panel he gave a brief intro of Decred and the importance of security and privacy of personal data. {link report when merged}
-- Nov 15-16 - [CriptoBlock](https://criptoblock.com.br/) - São Paulo, Brazil. @Rhama and @girino gave talks about Decred. Although the organizers worked hard, only around 250 people attended out of 1000-1200 expected, reflecting today's market. Decred was a bronze sponsor.
+- Nov 15-16 - [CriptoBlock](https://criptoblock.com.br/) - São Paulo, Brazil. @Rhama and @girino gave talks about Decred. Although the organizers worked hard, only around 250 people attended out of 1,000-1,200 expected, reflecting today's market. Decred was a bronze sponsor.
 - Nov 21 - [Africa Blockchain Summit](https://www.africablockchainsummit.com/agenda.html) - Rabat, Morocco. @arij took the opportunity to discover the point of view of view of centralized organizations and to represent Decred to a wide variety of people from different backgrounds. ([report](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$157443668448708migov:decred.org), [photos](https://twitter.com/DecredArabia/status/1197622992806776833)) {link report when merged}
 - Nov 21 - [Africa Fintech Summit](https://africafintechsummit.com/addis/) - Addis Ababa, Ethiopia. @akinsawyerr spoke on a blockchain panel and made a few valuable connections. Check the full report and photos [here](https://github.com/decredcommunity/events/blob/master/reports/20191121-africa-fintech-summit-addis-ababa-ethiopia.md). A week later he talked about Decred and the trip at @VOANews ([video](https://www.youtube.com/watch?v=WOqCjQELpao)).
 - Nov 21 - [Blockchain Conference](https://www.eventbrite.com.ar/e/conferencia-blockchain-tickets-81397410847) - Veracruz, Mexico. The event took place in the largest technology university in the city. {link report when merged}
