--- a/journal/201911.md
+++ b/journal/201911.md
@@ -108,7 +108,7 @@ Work continues on overhauled [overview](https://github.com/raedahgroup/dcrios/is
 
 v5.2 is out now!
 
-Frontend highlights: updated header and blocks page, improved charts, button to copy text to clipboard on addresses and hashes. On the backend: dcrd v1.5 support, dropped SQLite support to focus on PostgreSQL, Insight API fixes, performance improvements. Check the [release notes](https://github.com/decred/dcrdata/releases/tag/v5.2.0) to see all changes. The release took 83 commits by 9 contributors over 4 months. Contrats to dcrdata team!
+Frontend highlights: updated header and blocks page, improved charts, button to copy text to clipboard on addresses and hashes. On the backend: dcrd v1.5 support, dropped SQLite support to focus on PostgreSQL, Insight API fixes, performance improvements. Check the [release notes](https://github.com/decred/dcrdata/releases/tag/v5.2.0) to see all changes. The release took 83 commits by 9 contributors over 4 months. Congrats to dcrdata team!
 
 Work is in progress to show [CSPP mixes](https://github.com/decred/dcrdata/pull/1610) (live on alpha on [block](https://alpha.dcrdata.org/block/403513) page) and calculate [attack cost](https://github.com/decred/dcrdata/pull/1617).
 
@@ -137,7 +137,6 @@ Two new contributors missed by our detection earlier: neddoz ([dcrios](https://g
 
 Community stats:
 
-- Politeia users: {} (+{})
 - Twitter followers: 40,641 (+9)
 - Reddit subscribers: 9,703 (+47)
 - Matrix users: 474 (+18)
@@ -151,7 +150,7 @@ Community stats:
 
 ## Governance
 
-In November the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 14,096 DCR and spent 17,889 DCR. Using November's daily average DCR/USD rate of $19.97, this is $281K received and $357K spent. At Octobers's average daily rate of $15.59, the USD figure billed for work completed in that month is $279K. As of Dec 2, Treasury balance is 640,201 DCR, ($12.4 million USD at $19.44).
+In November the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 14,096 DCR and spent 17,889 DCR. Using November's daily average DCR/USD rate of $19.97, this is $281K received and $357K spent. At October's average daily rate of $15.59, the USD figure billed for work completed in that month is $279K. As of Dec 2, Treasury balance is 640,201 DCR, ($12.4 million USD at $19.44).
 
 There were two new proposals submitted, one for $650 for a DCR version of Point of Sale app [PlusBit](https://proposals.decred.org/proposals/e559188b0febcab29c49c1f7dd5c66645e31be00894a150ef7d0b8ceb6486605), and one by @buck54321 requesting $30,000 for continued development of [TinyDecred](https://proposals.decred.org/proposals/ad0f9688b3467734e2581604914b2cc32c6eb7991dff460eff41d21f66d88451). Voting started for both proposals on Dec 3.
 
@@ -173,9 +172,9 @@ Another spike of missed votes happened on [Nov 29](https://explorer.dcrdata.org/
 
 Nodes: Throughout [November](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1572566400000&to=1575158400000) there was an average of 189 public listening nodes and 398 normal nodes per dcr.farm. Version distribution: 73% use dcrd v1.4, 9.6% are dcrd v1.5 dev builds and RCs, 2% use dcrd v1.6 dev builds and 8.8% are dcrwallet v1.4.
 
-As of Dec 4, around 24% of PoS voters are signaling that they have upgraded and are ready to vote for the consensus rule change, per [dcrdata](https://explorer.dcrdata.org/agendas).
+As of Dec 4, around 24% of PoS voters are signalling that they have upgraded and are ready to vote for the consensus rule change, per [dcrdata](https://explorer.dcrdata.org/agendas).
 
-On Nov 24 Decred had its [400,000](https://www.reddit.com/r/decred/comments/e0yvyb/block_400000/) block.
+On Nov 24 block [400,000](https://www.reddit.com/r/decred/comments/e0yvyb/block_400000/) was mined and approved by voters.
 
 ## Integrations
 
@@ -213,7 +212,7 @@ Also:
 - Identified and shared opportunities for the community to engage with Crypto Twitter and educate outsiders about Decred.
 - Worked closely to support the Decred developer community's achievements over the last year.
 
-@bee wrote an overview of [marketing strategies](https://xaur.github.io/writings/posts/20191127-marketing-strategies.html) to explore. Some of the key topics are to improve reporting, use word "money", promote the actual use of DCR for tipping, donations and funding projects, pitch DCR to higly aligned communities and individuals as a way to transfer value, and boost social media presence. ([Reddit](https://www.reddit.com/r/decred/comments/e2lhwd/marketing_strategies/))
+@bee wrote an overview of [marketing strategies](https://xaur.github.io/writings/posts/20191127-marketing-strategies.html) to explore. Some of the key topics are to improve reporting, use word "money", promote the actual use of DCR for tipping, donations and funding projects, pitch DCR to highly aligned communities and individuals as a way to transfer value, and boost social media presence. ([Reddit](https://www.reddit.com/r/decred/comments/e2lhwd/marketing_strategies/))
 
 ## Events
 
@@ -224,7 +223,7 @@ Attended:
 - Nov 6 - [Decred Meetup](https://twitter.com/amxromero/status/1192241858816217089) - Medellín, Colombia. @elian and @victorarubin talked to around 35 people of age 20-50 who asked amazing questions about Politeia, Decred's plans for Latam, PoS attack vectors and smart contracts. {link report when merged} (photos: [1](https://twitter.com/Decred_ES/status/1192236147201712128), [2](https://twitter.com/victorarubin/status/1192262347118858241))
 - Nov 7 - [Journey 4.0](https://twitter.com/legal_medellin/status/1189918302061187073) - Medellín, Colombia. @elian was invited by Legal Hackers Medellín to talk about the challenges of blockchain technology for international law at EAFIT University, biggest business administration university in Colombia. {link report when merged}
 - Nov 8 - [World Blockchain Conference](https://www.8btc.com/wbc-2019/) - Jiaxing, China. @Dominic has represented Decred and talked about DAO and privacy features. There have been reports of him being turned into a [cyborg](https://twitter.com/wanbihou/status/1192484367626424321) at the party preceding the event. Community members in the region are advised to follow standard protocols and take necessary precautions. Another notable event is video footage of [dancing](https://twitter.com/wanbihou/status/1193154668601327617) that sparked [#DecredDanceChallenge](https://twitter.com/hashtag/DecredDanceChallenge). (photos: [1](https://twitter.com/wanbihou/status/1192806081568722944), [2](https://twitter.com/wanbihou/status/1193218449721311233))
-- Nov 15 - [Open Banking, Fintech and Blockchain Summit](https://twitter.com/Decred_ES/status/1195025379255144448) in Mexico City, Mexico. @elian was invited to talk about digital identities. During the panel he gave a brief intro of Decred and the importance of security and privacy of personal data. {link report when merged}
+- Nov 15 - [Open Banking, Fintech and Blockchain Summit](https://twitter.com/Decred_ES/status/1195025379255144448) in Mexico City, Mexico. @elian was invited to talk about digital identities. During the panel he gave a brief intro to Decred and the importance of security and privacy of personal data. {link report when merged}
 - Nov 15-16 - [CriptoBlock](https://criptoblock.com.br/) - São Paulo, Brazil. @Rhama and @girino gave talks about Decred. Although the organizers worked hard, only around 250 people attended out of 1,000-1,200 expected, reflecting today's market. Decred was a bronze sponsor.
 - Nov 21 - [Africa Blockchain Summit](https://www.africablockchainsummit.com/agenda.html) - Rabat, Morocco. @arij took the opportunity to discover the point of view of view of centralized organizations and to represent Decred to a wide variety of people from different backgrounds. ([report](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$157443668448708migov:decred.org), [photos](https://twitter.com/DecredArabia/status/1197622992806776833)) {link report when merged}
 - Nov 21 - [Africa Fintech Summit](https://africafintechsummit.com/addis/) - Addis Ababa, Ethiopia. @akinsawyerr spoke on a blockchain panel and made a few valuable connections. Check the full report and photos [here](https://github.com/decredcommunity/events/blob/master/reports/20191121-africa-fintech-summit-addis-ababa-ethiopia.md). A week later he talked about Decred and the trip at @VOANews ([video](https://www.youtube.com/watch?v=WOqCjQELpao)).
@@ -330,13 +329,13 @@ Decred adds another dimension whereby the legitimacy of the chain is established
 
 Resolution of the ZEC trademark issue allowed [polling](https://www.zfnd.org/blog/community-sentiment-collection-poll/) for NU4 to proceed, where the Zcash ecosystem/community can signal support for 13 options to fund development. The ECC and Zcash Foundation will consider the results from 3 [or 4](https://twitter.com/zooko/status/1200917828011876352) different polling methods when deciding what plan to adopt.
 
-Aragon [completed](https://blog.aragon.org/final-results-from-aragon-network-vote-4/) its 4th AGP voting round, 15 proposals were voted on and ANT participation was around 3-18%. Among the approved proposals was [AGP-103](https://github.com/aragon/AGPs/blob/master/AGPs/AGP-103.md), introducing a network budget of 5% Treasury value or 250,000 DAI (whichever is greater) per quarterly voting cycle. The largest proposal to be approved (with 9% turnout, 91% approval) is [AGP-106](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-106.md) to develop and launch Aragon Chain, at a cost of $500,000. The aim is to create a new layer 1 protocol and offer it as an alternative to the Ethereum-based Aragon network. Among the reasons cited were increasing costs of keeping up with changes to the Ethereum network's changes. [AGP-112](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-112.md), which also passed, issued a proclamation that Aragon is opposed to ProgPoW on Ethereum, or any other non-emergency change to mining algorithm before Ethereum 2.0. The highest turnout proposal was [AGP-81](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-81.md), with 17% of ANT turning out to vote no on a collaboration with Kleros on the court system.
+Aragon [completed](https://blog.aragon.org/final-results-from-aragon-network-vote-4/) its 4th AGP voting round, 15 proposals were voted on and ANT participation was around 3-18%. Among the approved proposals was [AGP-103](https://github.com/aragon/AGPs/blob/master/AGPs/AGP-103.md), introducing a maximum network budget of 5% Treasury value or 250,000 DAI (whichever is greater) per quarterly voting cycle. The largest proposal to be approved (with 9% turnout, 91% approval) is [AGP-106](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-106.md) to develop and launch Aragon Chain, at a cost of $500,000. The aim is to create a new layer 1 protocol and offer it as an alternative to the Ethereum-based Aragon network. Among the reasons cited were increasing costs of keeping up with changes to the Ethereum network's changes. [AGP-112](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-112.md), which also passed, issued a proclamation that Aragon is opposed to ProgPoW on Ethereum, or any other non-emergency change to the mining algorithm before Ethereum 2.0. The highest turnout proposal was [AGP-81](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-81.md), with 17% of ANT turning out to vote no on a collaboration with Kleros on the court system.
 
-Aragon Court [launched](https://blog.aragon.org/aragon-court-is-live-on-mainnet/) on mainnet, it is a system for adjudicating "subjective disputes that cannot be resolved by smart contracts". ANT holders can stake their tokens for ANJ tokens, which can then be staked to participate in adjudication on cases brought before the court. Decisions are made through a Schelling game where those who guess the majority decision are rewarded and those who guess wrong have their stake slashed. Registration to become ANJ jurors is set to begin in Jan 2020.
+Aragon Court [launched](https://blog.aragon.org/aragon-court-is-live-on-mainnet/) on mainnet, it is a system for adjudicating "subjective disputes that cannot be resolved by smart contracts". ANT holders can stake their tokens for ANJ tokens, which can then be staked to participate in adjudication of cases brought before the court. Decisions are made through a Schelling game where those who guess the majority decision are rewarded and those who guess wrong have their stake slashed. Registration to become ANJ jurors is set to begin in Jan 2020.
 
-Dragonfly Research published an [article](https://medium.com/dragonfly-research/breaking-mimblewimble-privacy-model-84bcd67bfe52) about "breaking Mimblewimble's privacy model" by monitoring the network in real time. @jy-p had identified this issue as part of his review of privacy solutions, and subsequently discussed it on the base layer [podcast](https://acrabaselayer.podbean.com/e/base-layer-episode-086-jake-yocom-piatt-decred/). Grin developer [replied](https://medium.com/grin-mimblewimble/factual-inaccuracies-of-breaking-mimblewimbles-privacy-model-8063371839b9) to the article, stating that it has sensationalized a known limitation and does not constitute an attack.
+Dragonfly Research published an [article](https://medium.com/dragonfly-research/breaking-mimblewimble-privacy-model-84bcd67bfe52) about "breaking Mimblewimble's privacy model" by monitoring the network in real time. @jy-p had identified this issue as part of his review of privacy solutions, and subsequently discussed it on the base layer [podcast](https://acrabaselayer.podbean.com/e/base-layer-episode-086-jake-yocom-piatt-decred/). A Grin developer [replied](https://medium.com/grin-mimblewimble/factual-inaccuracies-of-breaking-mimblewimbles-privacy-model-8063371839b9) to the article, stating that it has sensationalized a known limitation and does not constitute an attack.
 
-An "Unknown Fund" was [announced](https://www.unknown.fund/press-release), pledging to invest and donate $75 million in Bitcoin for the startups which directly or indirectly support the idea of anonymity. "Preference will be given to the following niches: protection of personal data, tools for anonymity, cryptocurrency and blockchain.". The fund is quite opaque, only saying that "Applications are closed for the Unknown Fund. Evaluation will take a few months.".
+An "Unknown Fund" was [announced](https://www.unknown.fund/press-release), pledging to invest and donate $75 million in Bitcoin for the startups which directly or indirectly support the idea of anonymity. "Preference will be given to the following niches: protection of personal data, tools for anonymity, cryptocurrency and blockchain.". The fund is quite opaque, only saying that "Applications are closed for the Unknown Fund. Evaluation will take a few months.". People are starting to [ask](https://twitter.com/hasufl/status/1202927790082932736) if it may have been a hoax.
 
 The Stellar Development Foundation (SDF) [announced](https://www.stellar.org/blog/sdfs-next-steps/) that it had [burned](https://www.theblockcrypto.com/linked/45793/the-stellar-foundation-has-burned-over-50-of-the-total-xlm-token-supply-canceling-airdrop-programs) 55 billion XLM, worth over $4.4 billion (notionally), and representing more than 50% of the entirely pre-mined XLM supply. The stated reasons were a belief that the foundation could achieve its aims with less funding, and that the large scale airdrop campaigns were proving ineffective.
 
@@ -352,7 +351,7 @@ Justin Sun of Tron [revealed](https://www.coindesk.com/despite-denials-tron-foun
 
 BitMEX unfortunately [leaked](https://www.coindesk.com/bitmex-exchange-exposes-user-base-in-email-mishap) their email database by sending an email to everyone using cc instead of bcc. Oops. This leads to targeting of users, revealing one aspect of their identity to parties with mal-intent. 
 
-Korean [OKEx](https://cointelegraph.com/news/cryptocurrency-exchange-okex-delists-xmr-dash-zec-zen-sbtc) and [Upbit](https://cointelegraph.com/news/upbit-exchange-delists-privacy-coins-due-to-money-laundering-concerns)) announced delisitng of privacy coins such as Monero, Zcash, Dash and others, although delisting of DASH and ZEC was halted for a [review](https://www.coindesk.com/okex-korea-reviewing-decision-to-delist-privacy-coins-zcash-and-dash) on OKEx. (_missed in Sep and Oct_)
+Korean [OKEx](https://cointelegraph.com/news/cryptocurrency-exchange-okex-delists-xmr-dash-zec-zen-sbtc) and [Upbit](https://cointelegraph.com/news/upbit-exchange-delists-privacy-coins-due-to-money-laundering-concerns) announced delisting of privacy coins such as Monero, Zcash, Dash and others, although delisting of DASH and ZEC was halted for a [review](https://www.coindesk.com/okex-korea-reviewing-decision-to-delist-privacy-coins-zcash-and-dash) on OKEx. (_missed in Sep and Oct_)
 
 Bittrex has [adopted](https://www.coindesk.com/bittrex-chainalysis-kyt) Chainalysis [Know Your Transaction](https://blog.chainalysis.com/reports/real-time-alerts-press-release) software that monitors 15 cryptoassets for suspicious activity in real-time. (_missed in Sep_).
 
@@ -366,7 +365,7 @@ U.S. companies are [stacking up cash](https://www.axios.com/businesses-spending-
 
 The "fun" part in these dynamics where investors are [moving to cash](https://www.bloomberg.com/news/articles/2019-11-12/world-s-rich-readying-for-major-stock-sell-off-ubs-wealth-says) is that while it saves their value from more risky assets and negative interest rates, it will still be diluted by creation of fiat money that is [almost impossible](https://www.home.saxo/en-hk/insights/content-hub/articles/2019/11/20/investing-themes-to-watch-over-the-next-decade) to stop now.
 
-Global debt is hitting all-time highs. The numbers vary by the source: $188 trillion and 230% of the world output figure comes from [IMF chief](https://www.ibtimes.com/global-debt-surges-record-high-188-tn-imf-chief-2861715), while $250 trillion and 320% of world output figure is from [Axios](https://www.axios.com/capital-markets-eye-world-soaring-debt-400f9f37-46b5-45ad-9487-c09ba8958c09.html), which cited Institute of International Finance.
+Global debt is hitting all-time highs. The numbers vary by the source: $188 trillion and 230% of the world output figure comes from [IMF chief](https://www.ibtimes.com/global-debt-surges-record-high-188-tn-imf-chief-2861715), while $250 trillion and 320% of world output figure is from [Axios](https://www.axios.com/capital-markets-eye-world-soaring-debt-400f9f37-46b5-45ad-9487-c09ba8958c09.html), which cited the Institute of International Finance.
 
 Certain physical security providers report an increased [demand](https://www.bloomberg.com/news/articles/2019-11-20/world-s-rich-are-rattled-and-looking-for-old-fashioned-security) for safe deposit boxes to store precious metals, cash and cryptocurrency. The motives cited are fears of a global recession, avoidance of negative interest rates and natural disasters.
 
@@ -380,7 +379,7 @@ During October [protests](https://twitter.com/dalalmawad/status/1186705664229466
 
 GitHub has [removed](https://techcrunch.com/2019/10/30/github-removes-tsunami-democratics-apk-after-a-takedown-order-from-spain/) the APK of an app for organizing protests in Catalonia, acting on a court takedown request sent by Spain's national police force.
 
-CEO of Mongolia-based IDAX exchange has [disappeared](https://idax.zendesk.com/hc/en-us/articles/360037327571-Urgent-announcement-about-current-situation-of-IDAX-Global) together with keys from exchange's cold storage. Five days prior to that the exchange has announced withdrawal [problems](https://idax.zendesk.com/hc/en-us/articles/360036736211-Announcement-of-IDAX-withdrawal-channel-congestion) and that it will no longer serve users in [China](https://idax.zendesk.com/hc/en-us/articles/360036736691-IDAX-no-longer-provide-services-for-users-in-China). This is reminiscent of the case of Canadian QuadrigaCX whose CEO  mysteriously disappeared, also with the keys. The takeaways here are: have several backup people with the keys if you run an important service, screen your exchange and ideally, contribute to replacing custodial exchanges with [non-custodial](https://github.com/decred/dcrdex) ones.
+The CEO of Mongolia-based IDAX exchange has [disappeared](https://idax.zendesk.com/hc/en-us/articles/360037327571-Urgent-announcement-about-current-situation-of-IDAX-Global) together with the keys for the exchange's cold storage. Five days prior to that the exchange announced withdrawal [problems](https://idax.zendesk.com/hc/en-us/articles/360036736211-Announcement-of-IDAX-withdrawal-channel-congestion) and that it will no longer serve users in [China](https://idax.zendesk.com/hc/en-us/articles/360036736691-IDAX-no-longer-provide-services-for-users-in-China). This is reminiscent of the case of Canadian QuadrigaCX whose keys also mysteriously disappeared along with the CEO. The takeaways here are: have several backup people with the keys if you run an important service, screen your exchange and ideally, contribute to replacing custodial exchanges with [non-custodial](https://github.com/decred/dcrdex) ones.
 
 A trojan-enabled version of Tor browser was [targeting](https://www.welivesecurity.com/2019/10/18/fleecing-onion-trojanized-tor-browser/) Bitcoin users, discovered by ESET. The trojan version was spreading from `tor-browser[.]org` and `torproect[.]org` domains.
 
@@ -388,9 +387,9 @@ The prominent getmonero.org site was [compromised](https://arstechnica.com/infor
 
 A fake Zcash wallet was [distributed](https://twitter.com/mineZcash/status/1185908172105453568) through a github.su domain. (_missed in Oct_)
 
-Another fake Decred wallet was noticed, reported and quickly removed by GitHub. The account named `decreds` and the way the fake [v1.5.0 release](https://archive.today/ivVRO) was published looked surprisingly similar to previous "v1.5.0 Mandatory Update" by `DecredCoin` covered in [September](201909.md). It feels like hackers can't wait for v1.5 final _(we too!)_. If you encounter anything like this on GitHub or elsewhere, please report it to the platform immediately and notify the community to minimize possible damage.
+Another fake Decred wallet was noticed, reported and quickly removed by GitHub. The account named `decreds` and the way the fake [v1.5.0 release](https://archive.today/ivVRO) was published looked similar to previous "v1.5.0 Mandatory Update" by `DecredCoin` covered in [September](201909.md). It feels like hackers can't wait for v1.5 final release _(we too!)_. If you encounter anything like this on GitHub or elsewhere, please report it to the platform immediately and notify the community to minimize possible damage.
 
-If you couldn't upload enough of your data to Google, it is [planning](https://www.cnbc.com/2019/11/13/google-reportedly-offering-checking-accounts-next-year.html) to enter the banking business and offer checking accounts next year. Project codename "Cache" is a bit ironical because in computing [caches](https://en.wikipedia.org/wiki/Cache_%28computing%29) are often wiped.
+If you couldn't upload enough of your data to Google, it is [planning](https://www.cnbc.com/2019/11/13/google-reportedly-offering-checking-accounts-next-year.html) to enter the banking business and offer checking accounts next year. Project codename "Cache" is a bit ironic because in computing [caches](https://en.wikipedia.org/wiki/Cache_%28computing%29) are often wiped.
 
 ## About This Issue
 
