--- a/journal/201911.md
+++ b/journal/201911.md
@@ -6,10 +6,10 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 {introduction, major news of the month ordered by impact}
 
-- new RCs
-- DEX development
-- Latam marketing approved
-- LN ticket splitting
+- A second v1.5.0 release candidate came out, some more bugs were identified, and these have been addressed in a third release candidate. Thanks to everyone who tests these RCs and reports in with bugs!
+- The DEX infrastructure project saw significant advances this month, with initial versions of the Decred wallet, auth management and epoch processing being added.
+- The Latam marketing and events proposal from @elian was approved, making it the first regional marketing effort to be approved with a budget that is independent of the main marketing effort.
+- @matheusd dropped a huge series of blog post essays laying out a plan for ticket splitting on Lightning Network, the advantages of doing it this way (low minimum amount to participate, better user experience), and the consensus changes required to facilitate doing it well.
 
 ## RC2/3
 
